import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id "java"
    id "idea"
    id "org.springframework.boot" version "4.1.0"
    id "io.freefair.lombok" version "9.5.0"
    id "com.github.spotbugs" version "6.5.6"
    id "com.github.ben-manes.versions" version "0.54.0"
    id "org.owasp.dependencycheck" version "12.2.2"
    id "com.diffplug.spotless" version "8.6.0"
    id "info.solidsoft.pitest" version "1.19.0"
    id "org.openrewrite.rewrite" version "7.34.0"
}

spotless {
    java {
        googleJavaFormat()
    }
}

lombok {
    version = "1.18.46"
}

ext {
    javaUuidGeneratorVersion = "5.2.0"
    logstashVersion = "9.0"
    caffeineVersion = "3.2.4"
    mockServerVersion = "5.15.0"
    archUnitVersion = "1.4.1"
    springDataSqliteVersion = "1.4.0"
    sqliteJdbcVersion = "3.53.2.0"
    apacheHttpClient5Version = "5.6.1"
}

repositories {
    mavenCentral()
}

bootJar {
    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
}

dependencies {
    // Import the Spring Boot BOM as a Gradle platform() so all Spring Boot dependencies
    // get version recommendations without io.spring.dependency-management.
    // SpringBootPlugin.BOM_COORDINATES stays in sync with the plugin version above.
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
    // In Spring Boot 4.x, LiquibaseAutoConfiguration moved to the separate spring-boot-liquibase
    // module. The starter pulls in both spring-boot-liquibase (auto-configuration) + liquibase-core.
    implementation "org.springframework.boot:spring-boot-starter-liquibase"
    implementation "org.xerial:sqlite-jdbc:${sqliteJdbcVersion}"
    implementation "org.komamitsu:spring-data-sqlite:${springDataSqliteVersion}"
    implementation "com.fasterxml.uuid:java-uuid-generator:${javaUuidGeneratorVersion}"
    implementation "net.logstash.logback:logstash-logback-encoder:${logstashVersion}"
    implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
    implementation "org.apache.httpcomponents.client5:httpclient5:${apacheHttpClient5Version}"
    testImplementation("org.springframework.boot:spring-boot-starter-test") {
        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
    }
    testImplementation "org.springframework.boot:spring-boot-webmvc-test"
    testImplementation "org.springframework.boot:spring-boot-data-jdbc-test"
    testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
    testImplementation "org.mock-server:mockserver-spring-test-listener:${mockServerVersion}"
    // @SneakyThrows bytecode calls lombok.Lombok.sneakyThrow() at runtime; lombok is compile-only
    // by default (via the freefair plugin) so we must also add it as a test runtime dependency.
    testRuntimeOnly "org.projectlombok:lombok"
}

group = "de.otto.platform"

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tag {
    message fromMandatorySystemProperty('message')
}

import java.text.SimpleDateFormat

bootJar {
    manifest {
        attributes(
                'Implementation-Vendor': project.group,
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Built-By': System.properties['user.name'],
                'Created-By': "Gradle ${gradle.gradleVersion}",
                'Build-Timestamp': new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                'Build-Jdk': "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                'Build-OS': "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
        )
    }
}

apply from: "${rootDir}/gradle/test.gradle"
apply from: "${rootDir}/gradle/spotbugs.gradle"
apply from: "${rootDir}/gradle/dependencycheck.gradle"
apply from: "${rootDir}/gradle/checkstyle.gradle"
apply from: "${rootDir}/gradle/pmd.gradle"
apply from: "${rootDir}/gradle/jacoco.gradle"
apply from: "${rootDir}/gradle/pitest.gradle"
apply from: "${rootDir}/gradle/rewrite.gradle"


